# redis-plus-plus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Chinese.md  README.md  config.h.in  hiredis_features.h.in
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  build-redis-plus-plus.yml  cmake-multi-platform.yml
cmake/: FindHiredis.cmake  redis++-config.cmake.in  redis++-tls-config.cmake.in  redis++.pc.in
src/sw/redis++/: async_command.h  async_connection.cpp  async_connection.h  async_connection_pool.cpp  async_connection_pool.h  async_event.h  async_redis++.h  async_redis.cpp  async_redis.h  async_redis_cluster.cpp  async_redis_cluster.h  async_sentinel.cpp  async_sentinel.h  async_shards_pool.cpp  async_shards_pool.h  async_subscriber.cpp  async_subscriber.h  async_subscriber_impl.cpp  async_subscriber_impl.h  cmd_formatter.h  co_redis++.h  co_redis.h  co_redis_awaiter.h  co_redis_cluster.h  command.cpp  command.h  command_args.h  command_options.cpp  command_options.h  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  crc16.cpp  errors.cpp  errors.h  event_loop.cpp  event_loop.h  exceptions.h  is_command_functor.h  (+46 more)
src/sw/redis++/cxx11/: cxx_utils.h
src/sw/redis++/cxx11/sw/redis++/: cxx_utils.h
src/sw/redis++/cxx17/: cxx_utils.h
src/sw/redis++/cxx17/sw/redis++/: cxx_utils.h
src/sw/redis++/future/boost/: async_utils.h
src/sw/redis++/future/boost/sw/redis++/: async_utils.h
src/sw/redis++/future/std/: async_utils.h
src/sw/redis++/no_tls/: tls.h
src/sw/redis++/patterns/: redlock.cpp  redlock.h
src/sw/redis++/recipes/: redlock.cpp  redlock.h  redlock.tpp
src/sw/redis++/tls/: tls.cpp
src/sw/redis++/tls/sw/redis++/: tls.cpp  tls.h
test/: CMakeLists.txt
test/src/sw/redis++/: IsCommandFunctorTest.cpp  async_test.h  cluster_test.cpp  cluster_test.h  cluster_test.hpp  connection_cmds_test.cpp  connection_cmds_test.h  geo_cmds_test.cpp  geo_cmds_test.h  geo_cmds_test.hpp  hash_cmds_test.cpp  hash_cmds_test.h  hash_cmds_test.hpp  hyperloglog_cmds_test.cpp  hyperloglog_cmds_test.h  hyperloglog_cmds_test.hpp  keys_cmds_test.cpp  keys_cmds_test.h  keys_cmds_test.hpp  list_cmds_test.cpp  list_cmds_test.h  list_cmds_test.hpp  pipeline_transaction_test.cpp  pipeline_transaction_test.h  pipeline_transaction_test.hpp  pubsub_test.cpp  pubsub_test.h  redlock_test.h  redlock_test.hpp  sanity_test.cpp  sanity_test.h  sanity_test.hpp  script_cmds_test.cpp  script_cmds_test.h  script_cmds_test.hpp  set_cmds_test.cpp  set_cmds_test.h  set_cmds_test.hpp  stream_cmds_test.cpp  stream_cmds_test.h  (+15 more)
try_compile/: try_optional.cpp  try_string_view.cpp
